📝 Python - 版本管理工具 - Linux-update-alternatives

--- a/docs/Language/Python/版本管理工具.md
+++ b/docs/Language/Python/版本管理工具.md
@@ -19,6 +19,7 @@
           - [check\_hostname requires server\_hostname](#check_hostname-requires-server_hostname)
           - [各类 `HTTPError` 相关](#各类-httperror-相关)
           - [`ModuleNotFoundError: No module named 'pip._vendor....'`](#modulenotfounderror-no-module-named-pip_vendor)
+    - [Linux-update-alternatives](#linux-update-alternatives)
   - [Python依赖版本管理工具](#python依赖版本管理工具)
     - [virtual environment](#virtual-environment)
     - [Pipenv](#pipenv)
@@ -451,6 +452,16 @@ conda update anaconda-navigator -y
 
 - `pip` 出问题了
 - 在 `CMD.exe Prompt` 中执行 `conda update pip` 即可
+
+---
+
+### Linux-update-alternatives
+
+> [如何在ubuntu中切换使用不同版本的python_python_脚本之家 (jb51.net)](https://www.jb51.net/article/276121.htm)
+
+在 Linux 上, 类似于[Java | DailyNotes (ayusummer233.gitlab.io)](https://ayusummer233.gitlab.io/dailynotesbackup/Language/Java/Java.html) 中提到的可以用 `update-alternatives` 管理当前 jdk 版本
+
+python 也可以使用  `update-alternatives`  管理全局的 python 版本, 详见 [如何在ubuntu中切换使用不同版本的python_python_脚本之家 (jb51.net)](https://www.jb51.net/article/276121.htm)
 
 ---
 
