📝 补充一些 poetry 相关注意事项

--- a/docs/Language/Python/版本管理工具.md
+++ b/docs/Language/Python/版本管理工具.md
@@ -612,6 +612,8 @@ Poetry 提供了一个自定义的安装程序, 通过解构 Poetry 的依赖关
 
 @tab Linux
 
+> kali 推荐通过此种方式安装
+
 `osx / linux / bashonwindows install instructions`:
 
 ```shell
@@ -619,7 +621,7 @@ Poetry 提供了一个自定义的安装程序, 通过解构 Poetry 的依赖关
 export http_proxy="http://127.0.0.1:7890"
 export https_proxy="http://127.0.0.1:7890"
 # 安装 poetry
-curl -sSL https://install.python-poetry.org | python -
+curl -sSL https://install.python-poetry.org | python3 -
 ```
 
 > 如果报错
@@ -661,7 +663,7 @@ poetry -V
 
 ---
 
-@tab:active Windows
+@tab Windows
 
 `windows powershell install instructions`:
 
@@ -703,7 +705,11 @@ poetry --version
 
 ---
 
-@tab pipx
+@tab:active pipx
+
+> Windows 推荐使用 pipx 的方式安装
+>
+> kali 不建议使用此种方式安装
 
 安装 pipx(需要 pip 19.0 及以上版本)
 
@@ -786,14 +792,14 @@ url = "http://example.com/simple"
 > [[tool.poetry.source]]
 > name = "aliyun"
 > url = "http://mirrors.aliyun.com/pypi/simple"
-> default = true
+> priority = "primary"
 > ```
 >
 > ```toml
 > [[tool.poetry.source]]
 > name = "tsinghua"
 > url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
-> default = true
+> priority = "primary"
 > ```
 
 ---
@@ -838,7 +844,7 @@ poetry add numpy
 
 ---
 
-##### 结合 conda 环境使用
+###### 结合 conda 环境使用
 
 poetry 可以直接使用 conda 环境而不单独创建虚拟环境
 
@@ -863,6 +869,28 @@ conda activate "$@"
 ```
 
 > 奇怪的是虽然没有 activate 脚本, 但是直接 conda activate 是有用的
+
+---
+
+##### 删除虚拟环境
+
+查找虚拟环境的位置:
+
+```bash
+poetry env info --path
+```
+
+列出所有的虚拟环境:
+
+```bash
+poetry env list
+```
+
+从上述命令输出中找到需要删除的虚拟环境的名称然后运行如下命令:
+
+```bash
+poetry env remove [虚拟环境名称]
+```
 
 ---
 
