📝 添加一些参考链接

--- a/docs/网络安全/Web安全/Webshell/Webshell管理工具/冰蝎.md
+++ b/docs/网络安全/Web安全/Webshell/Webshell管理工具/冰蝎.md
@@ -2,5 +2,13 @@
 
 > [rebeyond/Behinder: “冰蝎”动态二进制加密网站管理客户端 (github.com)](https://github.com/rebeyond/Behinder)
 
+---
+
+## 流量分析
+
+> [冰蝎4.0客户端流量分析 - 先知社区 (aliyun.com)](https://xz.aliyun.com/t/14341)
+>
+> [冰蝎和蚁剑的流量特征 · 2022护网笔记 · 看云 (kancloud.cn)](https://www.kancloud.cn/user1157546548/hw_tips/2968743)
+
 
 
