📝 修改下描述

--- a/docs/通识/Linux/会话管理工具.md
+++ b/docs/通识/Linux/会话管理工具.md
@@ -1,6 +1,6 @@
-# Linux 窗口工具
+# Linux 会话管理工具
 
-- [Linux 窗口工具](#linux-窗口工具)
+- [Linux 会话管理工具](#linux-会话管理工具)
   - [Zellij](#zellij)
     - [安装](#安装)
     - [使用](#使用)
