--- a/docs/Language/Python/版本管理工具.md
+++ b/docs/Language/Python/版本管理工具.md
@@ -127,16 +127,20 @@ sudo apt-get install -y make build-essential libssl-dev zlib1g-dev libbz2-dev li
 
 ```bash
 # 安装 python3.10.4
-pyenv install python3.10.4
-# 为全局激活 python3.10.4
-pyenv global python3.10.4
+pyenv install 3.10.4
+# 为全局激活 python3.10.4(root用户下尽量不要使用)
+pyenv global 3.10.4
 # 每当您位于当前目录（或其子目录）时自动选择
-pyenv local python3.10.4
+pyenv local 3.10.4
 # 仅选择当前 shell 会话
-pyenv shell python3.10.4
+pyenv shell 3.10.4
 ```
 
 ![image-20240731182322273](http://cdn.ayusummer233.top/DailyNotes/202407311823350.png)
+
+> PS: 用起来感觉还是有些问题, 机子环境比较复杂, 有时候使用 pyenv 设置了 python 环境没能生效
+>
+> 目前暂时只是用来在 Linux 系统上下载与安装不同版本的 python, 然后后续结合 poetry 使用
 
 ---
 
