--- a/docs/通识/正则表达式.md
+++ b/docs/通识/正则表达式.md
@@ -45,7 +45,6 @@
 
 > [learn-regex/README-cn.md at master · ziishaned/learn-regex (github.com)](https://github.com/ziishaned/learn-regex/blob/master/translations/README-cn.md#什么是正则表达式)
 >
-> ---
 
 - 正则表达式是一组由字母和符号组成的特殊文本，它可以用来从文本中找出满足你想要的格式的句子。
 - 正则表达式是从左到右匹配主体字符串的
@@ -73,20 +72,19 @@
 正则表达式其实就是在执行搜索时的格式，它由一些字母和数字组合而成。
 例如：一个正则表达式 `the`，它表示一个规则：由字母`t`开始，接着是`h`，再接着是`e`。
 
-<pre>
-"the" => The fat cat sat on <a href="#learn-regex"><strong>the</strong></a> mat.
-</pre>
+"the" => The fat cat sat on `the` mat.
+
 [在线练习-regex](https://regex101.com/r/dmRygT/1)
 
 正则表达式`123`匹配字符串`123`。它逐个字符的与输入的正则表达式做比较。
 
 正则表达式是大小写敏感的，所以`The`不会匹配`the`。
 
-<pre>
-"The" => <a href="#learn-regex"><strong>The</strong></a> fat cat sat on the mat.
-</pre>
+"The" => `The` fat cat sat on the mat.
 
 [在线练习](https://regex101.com/r/1paXsy/1)
+
+---
 
 ## 2. 元字符
 
@@ -114,11 +112,11 @@
 `.`匹配任意单个字符，但不匹配换行符。
 例如，表达式`.ar`匹配一个任意字符后面跟着是`a`和`r`的字符串。
 
-<pre>
-".ar" => The <a href="#learn-regex"><strong>car</strong></a> <a href="#learn-regex"><strong>par</strong></a>ked in the <a href="#learn-regex"><strong>gar</strong></a>age.
-</pre>
+".ar" => The `car`  `par`ked  in the `gar`age
 
 [在线练习](https://regex101.com/r/xc9GkU/1)
+
+----
 
 ## 2.2 字符集
 
@@ -128,20 +126,18 @@
 在方括号中的字符集不关心顺序。
 例如，表达式`[Tt]he` 匹配 `the` 和 `The`。
 
-<pre>
-"[Tt]he" => <a href="#learn-regex"><strong>The</strong></a> car parked in <a href="#learn-regex"><strong>the</strong></a> garage.
-</pre>
+"[Tt]he" => `The` car parked in `the` garage.
 
 [在线练习](https://regex101.com/r/2ITLQ4/1)
 
 方括号的句号就表示句号。
 表达式 `ar[.]` 匹配 `ar.`字符串
 
-<pre>
-"ar[.]" => A garage is a good place to park a c<a href="#learn-regex"><strong>ar.</strong></a>
-</pre>
+"ar[.]" => A garage is a good place to park a c`ar`.
 
 [在线练习](https://regex101.com/r/wL3xtE/1)
+
+----
 
 ### 2.2.1 否定字符集
 
@@ -151,13 +147,16 @@
 <pre>
 "[^c]ar" => The car <a href="#learn-regex"><strong>par</strong></a>ked in the <a href="#learn-regex"><strong>gar</strong></a>age.
 </pre>
-
 [在线练习](https://regex101.com/r/nNNlq3/1)
+
+----
 
 ## 2.3 重复次数
 
 后面跟着元字符 `+`，`*` or `?` 的，用来指定匹配子模式的次数。
 这些元字符在不同的情况下有着不同的意思。
+
+----
 
 ### 2.3.1 `*` 号
 
@@ -176,8 +175,9 @@
 <pre>
 "\s*cat\s*" => The fat<a href="#learn-regex"><strong> cat </strong></a>sat on the con<a href="#learn-regex"><strong>cat</strong></a>enation.
 </pre>
-
 [在线练习](https://regex101.com/r/gGrwuz/1)
+
+----
 
 ### 2.3.2 `+` 号
 
@@ -187,8 +187,9 @@
 <pre>
 "c.+t" => The fat <a href="#learn-regex"><strong>cat sat on the mat</strong></a>.
 </pre>
-
 [在线练习](https://regex101.com/r/Dzf9Aa/1)
+
+----
 
 ### 2.3.3 `?` 号
 
@@ -204,8 +205,9 @@
 <pre>
 "[T]?he" => <a href="#learn-regex"><strong>The</strong></a> car is parked in t<a href="#learn-regex"><strong>he</strong></a> garage.
 </pre>
-
 [在线练习](https://regex101.com/r/kPpO2x/1)
+
+----
 
 ## 2.4 `{}` 号
 
@@ -233,8 +235,9 @@
 <pre>
 "[0-9]{3}" => The number was 9.<a href="#learn-regex"><strong>999</strong></a>7 but we rounded it off to 10.0.
 </pre>
-
 [在线练习](https://regex101.com/r/Sivu30/1)
+
+----
 
 ## 2.5 `(...)` 特征标群
 
@@ -246,8 +249,9 @@
 <pre>
 "(c|g|p)ar" => The <a href="#learn-regex"><strong>car</strong></a> is <a href="#learn-regex"><strong>par</strong></a>ked in the <a href="#learn-regex"><strong>gar</strong></a>age.
 </pre>
-
 [在线练习](https://regex101.com/r/tUxrBG/1)
+
+----
 
 ## 2.6 `|` 或运算符
 
@@ -258,8 +262,9 @@
 <pre>
 "(T|t)he|car" => <a href="#learn-regex"><strong>The</strong></a> <a href="#learn-regex"><strong>car</strong></a> is parked in <a href="#learn-regex"><strong>the</strong></a> garage.
 </pre>
-
 [在线练习](https://regex101.com/r/fBXyX0/1)
+
+----
 
 ## 2.7 转码特殊字符
 
@@ -270,12 +275,15 @@
 <pre>
 "(f|c|m)at\.?" => The <a href="#learn-regex"><strong>fat</strong></a> <a href="#learn-regex"><strong>cat</strong></a> sat on the <a href="#learn-regex"><strong>mat.</strong></a>
 </pre>
-
 [在线练习](https://regex101.com/r/DOc5Nu/1)
+
+----
 
 ## 2.8 锚点
 
 在正则表达式中，想要匹配指定开头或结尾的字符串就要使用到锚点。`^` 指定开头，`$` 指定结尾。
+
+----
 
 ### 2.8.1 `^` 号
 
@@ -294,8 +302,9 @@
 <pre>
 "^(T|t)he" => <a href="#learn-regex"><strong>The</strong></a> car is parked in the garage.
 </pre>
-
 [在线练习](https://regex101.com/r/jXrKne/1)
+
+----
 
 ### 2.8.2 `$` 号
 
@@ -312,8 +321,9 @@
 <pre>
 "(at\.)$" => The fat cat. sat. on the m<a href="#learn-regex"><strong>at.</strong></a>
 </pre>
-
 [在线练习](https://regex101.com/r/t0AkOd/1)
+
+----
 
 ##  3. 简写字符集
 
@@ -335,7 +345,9 @@
 |  \v   | 匹配一个垂直制表符                                |
 |  \p   | 匹配 CR/LF(等同于 `\r\n`) ，用来匹配 DOS 行终止符 |
 
-## 4. 零宽度断言(前后预查) 
+----
+
+## 4. 零宽度断言(前后预查)
 
 先行断言和后发断言(合称 lookaround) 都属于**非捕获组**(用于匹配模式，但不包括在匹配列表中) 。当我们需要一个模式的前面或后面有另一个特定的模式时，就可以使用它们。
 
@@ -350,6 +362,8 @@
 |  ?<=  | 正后发断言-存在 |
 |  ?<!  | 负后发断言-排除 |
 
+----
+
 ### 4.1 `?=...` 正先行断言
 
 `?=...` 正先行断言，表示第一部分表达式之后必须跟着 `?=...`定义的表达式。
@@ -363,8 +377,9 @@
 <pre>
 "(T|t)he(?=\sfat)" => <a href="#learn-regex"><strong>The</strong></a> fat cat sat on the mat.
 </pre>
-
 [在线练习](https://regex101.com/r/IDDARt/1)
+
+----
 
 ### 4.2 `?!...` 负先行断言
 
@@ -376,8 +391,9 @@
 <pre>
 "(T|t)he(?!\sfat)" => The fat cat sat on <a href="#learn-regex"><strong>the</strong></a> mat.
 </pre>
-
 [在线练习](https://regex101.com/r/V32Npg/1)
+
+----
 
 ### 4.3 `?<= ...` 正后发断言
 
@@ -387,8 +403,9 @@
 <pre>
 "(?<=(T|t)he\s)(fat|mat)" => The <a href="#learn-regex"><strong>fat</strong></a> cat sat on the <a href="#learn-regex"><strong>mat</strong></a>.
 </pre>
-
 [在线练习](https://regex101.com/r/avH165/1)
+
+----
 
 ### 4.4 `?<!...` 负后发断言
 
@@ -398,8 +415,9 @@
 <pre>
 "(?&lt;!(T|t)he\s)(cat)" => The cat sat on <a href="#learn-regex"><strong>cat</strong></a>.
 </pre>
-
 [在线练习](https://regex101.com/r/8Efx5G/1)
+
+----
 
 ## 5. 标志
 
@@ -411,6 +429,8 @@
 |   i   | 忽略大小写。                                          |
 |   g   | 全局搜索。                                            |
 |   m   | 多行修饰符：锚点元字符 `^` `$` 工作范围在每行的起始。 |
+
+----
 
 ### 5.1 忽略大小写 (Case Insensitive)
 
@@ -425,8 +445,9 @@
 <pre>
 "/The/gi" => <a href="#learn-regex"><strong>The</strong></a> fat cat sat on <a href="#learn-regex"><strong>the</strong></a> mat.
 </pre>
-
 [在线练习](https://regex101.com/r/ahfiuh/1)
+
+----
 
 ### 5.2 全局搜索 (Global search)
 
@@ -442,8 +463,9 @@
 <pre>
 "/.(at)/g" => The <a href="#learn-regex"><strong>fat</strong></a> <a href="#learn-regex"><strong>cat</strong></a> <a href="#learn-regex"><strong>sat</strong></a> on the <a href="#learn-regex"><strong>mat</strong></a>.
 </pre>
-
 [在线练习](https://regex101.com/r/dO1nef/1)
+
+----
 
 ### 5.3 多行修饰符 (Multiline)
 
@@ -466,8 +488,9 @@
                   cat <a href="#learn-regex"><strong>sat</strong></a>
                   on the <a href="#learn-regex"><strong>mat.</strong></a>
 </pre>
-
 [在线练习](https://regex101.com/r/E88WE2/1)
+
+----
 
 ### 6. 贪婪匹配与惰性匹配 (Greedy vs lazy matching)
 
@@ -500,3 +523,10 @@
 ![image-20221101164601465](http://cdn.ayusummer233.top/img/202211011655921.png)
 
 ![image-20221101164701283](http://cdn.ayusummer233.top/img/202211011649394.png)
+
+----
+
+
+
+
+
