--- a/docs/Language/Python/版本管理工具.md
+++ b/docs/Language/Python/版本管理工具.md
@@ -1296,6 +1296,12 @@ pdm pack -o app.pyz -m app:main
 
 #### 安装
 
+> [pipx-Installation](https://pipx.pypa.io/stable/installation/)
+
+:::tabs
+
+@tab:active Windows
+
 ```bash
 pip install pipx --user pipx
 ```
@@ -1319,6 +1325,19 @@ pip install pipx --user pipx
 那么说明成功了
 
 如果没有的话则需要手动将 `C:\Users\233\AppData\Roaming\Python\Python38\Scripts`(以我上面安装pipx的路径为例) 添加到环境变量的 `PATH` 变量中
+
+---
+
+@tab macOS
+
+```bash
+brew install pipx
+pipx ensurepath
+```
+
+![image-20241127162643829](http://cdn.ayusummer233.top/DailyNotes/202411271626885.png)
+
+:::
 
 ---
 
