--- a/docs/通识/通信/订阅更新.md
+++ b/docs/通识/通信/订阅更新.md
@@ -114,5 +114,48 @@ docker run -d --restart unless-stopped --log-opt max-size=10m -p 8083:80 -e TZ=A
 
 ![image-20240306005940677](http://cdn.ayusummer233.top/DailyNotes/202403060059715.png)
 
+---
+
+## 各平台自带订阅源
+
+> [RSS订阅源 / hypc's blog](https://hypc.github.io/2021/04/10/rss-source/)
+
+---
+
+### Github Repo
+
+- Repo Releases: `https://github.com/{owner}/{repo}/releases.atom`
+- Repo Commits: `https://github.com/{owner}/{repo}/commits.atom`
+- Repo Tags: `https://github.com/{user}/{repo}/tags.atom`
+- User Activity: `https://github.com/{user}.atom`
+
+---
+
+### 少数派
+
+- `https://sspai.com/feed`
+
+---
+
+### V2EX
+
+- 全站: `https://www.v2ex.com/index.xml`
+- 单独节点: `https://www.v2ex.com/feed/{节点名}.xml`
+
+*Examples:*
+
+- https://www.v2ex.com/?tab=tech –> https://www.v2ex.com/feed/tech.xml
+- https://www.v2ex.com/go/python –> https://www.v2ex.com/feed/python.xml
+
+---
+
+## RSSHub
+
+[RSSHub](https://docs.rsshub.app/)是一个开源、简单易用、易于扩展的RSS生成器，可以给任何奇奇怪怪的内容生成RSS订阅源。
+
+---
+
+
+
 
 
