📝 Gitlab Repo Commits RSS

--- a/docs/通识/通信/订阅更新.md
+++ b/docs/通识/通信/订阅更新.md
@@ -131,6 +131,14 @@ docker run -d --restart unless-stopped --log-opt max-size=10m -p 8083:80 -e TZ=A
 
 ---
 
+### Gitlab Repo
+
+> [how can I get a global rss feed on Gitlab? / stack overflow](https://stackoverflow.com/questions/23878941/how-can-i-get-a-global-rss-feed-on-gitlab)
+
+- Commits: `http://git.domain.name/userName/projectName/commits/master.atom?private_token=xxxxxxxxxxxxx`
+
+---
+
 ### 少数派
 
 - `https://sspai.com/feed`
