--- a/docs/通识/通信/订阅更新.md
+++ b/docs/通识/通信/订阅更新.md
@@ -163,7 +163,133 @@ docker run -d --restart unless-stopped --log-opt max-size=10m -p 8083:80 -e TZ=A
 
 ---
 
+### 常用API
 
+#### Bilibili
+
+- [up主动态](https://docs.rsshub.app/routes/social-media#up-%E4%B8%BB%E5%8A%A8%E6%80%81)
+
+   Example: `https://rsshub.app/bilibili/user/dynamic/2267573`
+
+  🛎️ Route:`/bilibili/user/dynamic/:uid/:routeParams?`
+
+  🔗 Parameters:
+
+  - ```
+    uid
+    ```
+
+    - **Required**
+    - **Description:** 用户 id, 可在 UP 主主页中找到
+
+  - ```
+    routeParams
+    ```
+
+    - **Optional**
+
+    - Description:
+
+      | 键         | 含义                              | 接受的值       | 默认值 |
+      | :--------- | :-------------------------------- | :------------- | :----- |
+      | showEmoji  | 显示或隐藏表情图片                | 0/1/true/false | false  |
+      | embed      | 默认开启内嵌视频                  | 0/1/true/false | true   |
+      | useAvid    | 视频链接使用 AV 号 (默认为 BV 号) | 0/1/true/false | false  |
+      | directLink | 使用内容直链                      | 0/1/true/false | false  |
+      | hideGoods  | 隐藏带货动态                      | 0/1/true/false | false  |
+
+      用例：`/bilibili/user/dynamic/2267573/showEmoji=1&embed=0&useAvid=1`
+
+  ⚙️ Deployment Configs:
+
+  - `BILIBILI_COOKIE_*`, optional - 如果没有此配置，那么必须开启 puppeteer 支持；BILIBILI_COOKIE_{uid}: 用于用户关注动态系列路由，对应 uid 的 b 站用户登录后的 Cookie 值，`{uid}` 替换为 uid，如 `BILIBILI_COOKIE_2267573`，获取方式： 1. 打开 https://api.vc.bilibili.com/dynamic_svr/v1/dynamic_svr/dynamic_new?uid=0&type=8 2. 打开控制台，切换到 Network 面板，刷新 3. 点击 dynamic_new 请求，找到 Cookie 4. 视频和专栏，UP 主粉丝及关注只要求 `SESSDATA` 字段，动态需复制整段 Cookie
+
+---
+
+- [up主图文](https://docs.rsshub.app/routes/social-media#up-%E4%B8%BB%E5%9B%BE%E6%96%87)
+
+  Example: `https://rsshub.app/bilibili/user/article/334958638`
+
+  🛎️ Route:`/bilibili/user/article/:uid`
+
+  🔗 Parameters:
+
+  - ```
+    uid
+    ```
+
+    - **Required**
+    - **Description:** 用户 id, 可在 UP 主主页中找到
+
+---
+
+- [用户追漫更新](https://docs.rsshub.app/routes/social-media#%E7%94%A8%E6%88%B7%E8%BF%BD%E6%BC%AB%E6%9B%B4%E6%96%B0)
+
+   Example: https://rsshub.app/bilibili/manga/followings/26009
+
+  🛎️ Route:`/bilibili/manga/followings/:uid/:limits?`
+
+  🔗 Parameters:
+
+  - ```
+    uid
+    ```
+
+    - **Required**
+    - **Description:** 用户 id
+
+  - ```
+    limits
+    ```
+
+    - **Optional**
+    - **Description:** 抓取最近更新前多少本漫画，默认为10
+
+  ⚙️ Deployment Configs:
+
+  - `BILIBILI_COOKIE_*`, required - BILIBILI_COOKIE_{uid}: 用于用户关注动态系列路由，对应 uid 的 b 站用户登录后的 Cookie 值，`{uid}` 替换为 uid，如 `BILIBILI_COOKIE_2267573`，获取方式： 1. 打开 https://api.vc.bilibili.com/dynamic_svr/v1/dynamic_svr/dynamic_new?uid=0&type=8 2. 打开控制台，切换到 Network 面板，刷新 3. 点击 dynamic_new 请求，找到 Cookie 4. 视频和专栏，UP 主粉丝及关注只要求 `SESSDATA` 字段，动态需复制整段 Cookie
+
+---
+
+#### Github
+
+- [Trending](https://docs.rsshub.app/zh/routes/popular#trending)
+
+  💡 Example: https://rsshub.app/github/trending/daily/javascript/en
+
+  🛎️ Route:`/github/trending/:since/:language/:spoken_language?`
+
+  🔗 Parameters:
+
+  - ```
+    since
+    ```
+
+    - **Required**
+    - **Options:** 
+      - daily: Today
+      - weekly: This week
+      - monthly: This month
+    - **Description:** time range
+
+  - ```
+    language
+    ```
+
+    - **Required**
+    - **Default:** any
+    - **Description:** the feed language, available in [Trending page](https://github.com/trending/javascript?since=monthly) 's URL, don't filter option is `any`
+
+  - ```
+    spoken_language
+    ```
+
+    - **Optional**
+    - **Description:** natural language, available in [Trending page](https://github.com/trending/javascript?since=monthly) 's URL
+
+  ⚙️ Deployment Configs:
+
+  - `GITHUB_ACCESS_TOKEN`, required -
 
 
 
