--- a/docs/通识/通信/订阅更新.md
+++ b/docs/通识/通信/订阅更新.md
@@ -291,5 +291,11 @@ docker run -d --restart unless-stopped --log-opt max-size=10m -p 8083:80 -e TZ=A
 
   - `GITHUB_ACCESS_TOKEN`, required -
 
+---
 
+# 一些RSS整理
+
+- [完整公众号列表 / Wehcat2RSS](https://wechat2rss.xlab.app/list/all.html)
+
+---
 
